# nicecs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  ecs.hpp
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  benchmark_ecs.cpp
nicecs/: ecs.hpp  sparse_set.hpp
tests/: CMakeLists.txt  benchmarks.cpp  test_ecs.cpp  tests.cpp  types.hpp
